# myLittleJVM

./: README.md
javaClassFile/: myIO.java
myLittleJVM/: CMakeLists.txt  main.cpp
myLittleJVM/BaseStruct/: BaseStruction.cpp  BaseStruction.h  Slots.h  miniVector.h
myLittleJVM/ClassFileRead/: ClassFileFormat.cpp  ClassFileFormat.h
myLittleJVM/Execute/: Executor.cpp  Executor.h  Instructions.cpp  Instructions.h  NativeMethod.cpp  NativeMethod.h
myLittleJVM/Heap/: heap.cpp  heap.h
myLittleJVM/MetaSpace/: ClassLoader.cpp  ClassLoader.h  Kclass.cpp  Kclass.h  MetaConstantPool.cpp  MetaConstantPool.h  Oop.h
myLittleJVM/Stack/: Stack.cpp  Stack.h
userClassFile/: CollectionTest.java  EulerSieve.java  Sort.java  Zoo.java
